commit current changes

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 master_resumes_original.jsonl
 cleaned_resumes.csv
 research_data.xlsx
+
+Smaller Models/distillbert_resume_level/
+Smaller Models/roberta_resume_level/
